Searching other words, though route to other ejs not working yet

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,9 +11,9 @@
 <p align="center">
 	<font size="5">
 	<a href='word/awesome'>awesome</a>
-<!-- <a href='word/cool'>cool</a> -->
-<!-- <a href='word/gnarly'>gnarly</a> -->
-<!-- <a href='word/bad'>bad</a> -->
-<!-- <a href='word/painful'>painful</a>	-->
+	<a href='word/cool'>cool</a>
+	<a href='word/gnarly'>gnarly</a>
+	<a href='word/bad'>bad</a>
+	<a href='word/painful'>painful</a>
 	</font>
 </p>
