Able to find awesome.ejs and searching uses it, added back to layout, added empty.ejs

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html>
 	<head>	
-		<title>Project 3</title>		
+		<title>Project 3</title>
+
+	    <link rel="stylesheet" type="text/css" href="public/stylesheets/style.css" />
 	</head>
 	
 	<body>
 		<b><p align="center"><font size="10">Tweeter and Links</font></p></b>
 			<%- body %>
 	</body>
+	
+    <p align="center"><a href="/">Back</a></p>
+	
 </html>
