--- a/views/word/awesome.ejs
+++ b/views/word/awesome.ejs
@@ -1,1 +1,1 @@
-<p>The awesome count is <%= awesomeCount %>!</p>
+<p align="center">The link that appeared the most in tweets with this word is <%= link %>!</p>
