Reference to stylesheet works, all basic requirements met

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,7 +3,7 @@
 	<head>	
 		<title>Project 3</title>
 
-	    <link rel="stylesheet" type="text/css" href="public/stylesheets/style.css" />
+	    <link rel="stylesheet" type="text/css" href="../stylesheets/style.css" />
 	</head>
 	
 	<body>
