Cleaned up comments, changed wording in a few places

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,4 @@
-<!-- This is a comment -->
+<!-- Index inside the body -->
 <p align="center"><font size="4">On Tweeter, people often send tweets with links
 	to other websites. <br>They might also describe those sites by saying that the
 	site the link takes users to is awesome or painful.<br>
