--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -11,6 +11,6 @@
 			<%- body %>
 	</body>
 	
-    <p align="center"><a href="/">Back</a></p>
+    <p align="center"><a href="/">Home</a></p>
 	
 </html>
