Added bootstrap, implemented into page

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,4 +1,4 @@
-body {
+.bodybackground  {
   padding: 50px;
   font: 20px "Lucida Grande", Helvetica, Arial, sans-serif;
   background-color:#B0C4DE;  
