--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,19 +1,23 @@
 <!-- Index inside the body -->
-<p align="center"><font size="4">On Tweeter, people often send tweets with links
+<p align="center"><font size="5">On Tweeter, people often send tweets with links
 	to other websites. <br>They might also describe those sites by saying that the
 	site the link takes users to is awesome or painful.<br>
-	This page tracks the links that are considered the most of some description!</font></p>
+	This page tracks the links that are considered the most of a certain description!</font></p>
 			
 <h1 align="center">Descriptions Searchable</h1>
 
+<br>
+
 <!-- <p>Here is the variable: <%= title %> </p> -->
 
-<p align="center">
-	<font size="5">
-	<a href='word/awesome'>awesome</a>
-	<a href='word/cool'>cool</a>
-	<a href='word/gnarly'>gnarly</a>
-	<a href='word/bad'>bad</a>
-	<a href='word/painful'>painful</a>
-	</font>
-</p>
+<div class="row">
+	<div class="span16" style="text-align:center">
+		<div class="btn-group">
+			<a href='word/awesome'><button class="btn">awesome</button></a>
+			<a href='word/cool'><button class="btn">cool</button></a>
+			<a href='word/gnarly'><button class="btn">gnarly</button></a>
+			<a href='word/bad'><button class="btn">bad</button></a>
+			<a href='word/painful'><button class="btn">painful</button></a>	
+		</div>
+    </div>
+</div>
