--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -2,15 +2,22 @@
 <html>
 	<head>	
 		<title>Project 3</title>
-
+		
 	    <link rel="stylesheet" type="text/css" href="../stylesheets/style.css" />
+		<link rel="stylesheet" href="http://twitter.github.com/bootstrap/1.4.0/bootstrap.min.css">
 	</head>
 	
-	<body>
+	<body class="bodybackground">
 		<b><p align="center"><font size="10">Tweeter and Links</font></p></b>
-			<%- body %>
+			<br>
+			<div class="container">
+				<%- body %>
+			</div>
 	</body>
 	
-    <p align="center"><a href="/">Home</a></p>
+	<br>
+	<br>
+	
+    <p align="center"><font size="4"><a href="/">Home</a></font></p>
 	
 </html>
