--- a/views/word/awesome.ejs
+++ b/views/word/awesome.ejs
@@ -1,1 +1,1 @@
-<p align="center">The link that appeared the most in tweets with this word is <%= link %>!</p>
+<p align="center"><font size="5">The link that appeared the most in tweets with this word is <%= link %>!</font></p>
