Tried to implement a little javascript

--- a/views/word/empty.ejs
+++ b/views/word/empty.ejs
@@ -1,1 +1,11 @@
 <p align="center"><font size="5">Unfortunately, <%= link %>!</font></p>
+<br>
+<br>
+<br>
+<div class="row">
+	<div class="span16" style="text-align:center">
+		<div class="btn-group">
+			<button id="home_button" class="btn">Choose another word?</button>
+		</div>
+    </div>
+</div>
