--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -5,6 +5,10 @@
 		
 	    <link rel="stylesheet" type="text/css" href="../stylesheets/style.css" />
 		<link rel="stylesheet" href="http://twitter.github.com/bootstrap/1.4.0/bootstrap.min.css">
+		
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.0/jquery.min.js" 
+		type="text/javascript"></script>
+		<script src="../javascripts/script.js" type="text/javascript"></script>
 	</head>
 	
 	<body class="bodybackground">
@@ -18,6 +22,6 @@
 	<br>
 	<br>
 	
-    <p align="center"><font size="4"><a href="/">Home</a></font></p>
+    <p id="home" align="center"><font size="4"><a href="/">Home</a></font></p>
 	
 </html>
