--- a/views/word/awesome.ejs
+++ b/views/word/awesome.ejs
@@ -1,1 +1,11 @@
-<p align="center"><font size="5">The link that appeared the most in tweets with this word is <%= link %>!</font></p>
+<p align="center"><font size="5">The link that appeared the most in tweets with this word is <a href=<%= link %>><%= link %></a>!</font></p>
+<br>
+<br>
+<br>
+<div class="row">
+	<div class="span16" style="text-align:center">
+		<div class="btn-group">
+			<button id="home_button" class="btn">Choose another word?</button>
+		</div>
+    </div>
+</div>
