Added a couple of search words

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,6 +18,8 @@
 			<a href='word/gnarly'><button class="btn">gnarly</button></a>
 			<a href='word/bad'><button class="btn">bad</button></a>
 			<a href='word/painful'><button class="btn">painful</button></a>	
+			<a href='word/lovely'><button class="btn">lovely</button></a>
+			<a href='word/interesting'><button class="btn">interesting</button></a>				
 		</div>
     </div>
 </div>
